Fix code clock display on mobile
- set overflow-x to auto

--- a/src/sass/elements.scss
+++ b/src/sass/elements.scss
@@ -36,6 +36,7 @@ strong {
     line-height: 1.8;
     border-radius: 1rem;
     font-size: .9rem;
+    overflow-x: auto;
 
     code {
       color: rgb(59, 59, 59);
